--- a/app/style.css
+++ b/app/style.css
@@ -6,6 +6,416 @@ body {
 
 .app {
    margin: 0;
-   width: '100%';
-   fontFamily: '"Lucida Console", Monaco, monospace''
+   width: 100%;
+   font-family: "Lucida Console", Monaco, monospace;
+}
+
+/*Boxes.jsx*/
+
+.box {
+   width: 21vw;
+   height: 21vw;
+   min-width: 200px;
+   min-height: 200px;
+   max-height: 300px;
+   max-width: 300px;
+   background-color: black;
+   display: inline-block;
+   margin-top: 250px;
+   transform: translateY( -50% );
+   background-position: center;
+   transition: all 0.3s;
+   box-sizing: border-box;
+   border: solid black 10px;
+}
+
+.box-inner {
+   width: 100%;
+   height: 100%;
+   background-color: rgba(0, 0, 0, 0.85);
+   transition: opacity 0.3s;
+   text-align: center;
+   position: relative;
+   overflow: hidden;
+}
+
+.box-inner-text {
+   font-family: sans-serif;
+   width: 100%;
+   position: absolute;
+   color: white;
+   font-size: 12px;
+   left: 0;
+   padding: 10px;
+   background-color: black;
+   box-sizing: border-box;
+   transition: all 0.3s;
+}
+
+.section {
+   width: 33%;
+   height: 100%;
+   float: left;
+   position: relative;
+   margin-top: 0;
+   margin-left: 0;
+   background-color: white;
+}
+
+.section-div {
+   width: 100%;
+   background-color: white;
+   color: black;
+   font-weight: 100;
+   text-align: center;
+   position: relative;
+}
+
+/*Contact.jsx*/
+
+.contact {
+   width: 100%;
+   text-align: center;
+   height: 50px;
+   margin-top: 135px;
+   position: relative;
+}
+
+.contact a {
+   width: 50px;
+   height: 50px;
+   display: inline-block;
+   margin: 0 20px;
+}
+
+.contact a img {
+   width: 100%;
+   height: 100%;
+}
+
+/*Gallery.jsx*/
+
+.button {
+   height: 10px;
+   width: 10px;
+   box-sizing: border-box;
+   border-radius: 5px;
+   margin: 0 20px;
+   display: inline-block;
+   cursor: pointer;
+}
+
+.gallery-nav {
+   height: 20px;
+   width: 100%;
+   z-index: 2;
+   position: absolute;
+   bottom: 20px;
+   left: 0;
+   text-align: center;
+}
+
+.achievment {
+   position: absolute;
+   top: 0;
+   width: 100%;
+   height: 100%;
+   background-position: center;
+   background-size: cover;
+   transition: left 1s;
+}
+
+.achievment-inner {
+   width: 100%;
+   height: 100%;
+   background-color: rgba(255, 255, 255, 0.8);
+   color: black;
+   position: relative;
+   margin: 0;
+}
+
+
+.achievment-inner-text {
+   position: absolute;
+   font-size: 30px;
+   line-height: 30px;
+   color: black;
+   text-align: center;
+   width: 100%;
+   padding: 0 10%;
+   left: 0;
+   top: 50%;
+   transform: translateY(-50%);
+   box-sizing: border-box;
+}
+
+.gallery {
+   position: relative;
+   width: 100%;
+   height: 100vh;
+   background-color: white;
+   overflow: hidden;
+}
+
+/*Loader.jsx*/
+
+.loader {
+   width: 200px;
+   height: 200px;
+   top: calc( 50vh - 100px );
+   left: calc( 50vw - 100px );
+   position: absolute;
+   font-size: 100px;
+}
+
+.brace {
+   width: 100px;
+   line-height: 200px;
+   text-align: center;
+   color: white;
+   float: left;
+}
+
+.loader-screen {
+   width: 100%;
+   height: 100vh;
+   background-color: black;
+   position: fixed;
+   z-index: 100;
+   transition: opacity 1.5s;
+}
+
+/*Menu.jsx*/
+
+.nav-button {
+   font-size: 24px;
+   text-align: center;
+   display: inline-block;
+   padding: 0 20px;
+   font-weight: 400;
+   height: 40px;
+   line-height: 40px;
+   transition: all 0.15s;
+   cursor: pointer;
+}
+
+.nav {
+   width: 100%;
+   height: 40px;
+   position: fixed;
+   left: 0;
+   text-align: center;
+   z-index: 10
+}
+
+/*Parallax.jsx*/
+
+.parallax-div {
+   width: 100%;
+   background-color: black;
+   background-position: 100% 50%;
+   background-size: auto 100%;
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   color: white;
+   padding: 40px 0;
+   box-sizing: border-box;
+}
+
+.parallax-div-text {
+   line-height: 30px;
+   font-size: 28px;
+   width: 100%;
+   font-weight: 100;
+   text-align: center;
+   display: inline-block;
+   margin-top: 45vh;
+   transform: translateY(-50%);
+}
+
+/*Skill.jsx*/
+
+.bar {
+   display: inline-block;
+   height: 50%;
+   width: 2px;
+   border-radius: 1px;
+   margin-left: 2px;
+}
+
+.skill {
+   width: 20%;
+   margin: 10px 2.5%;
+   height: 60px;
+   float: left;
+   text-align: center;
+   box-sizing: border-box;
+}
+
+.skill-title {
+   display: inline-block;
+   width: 100%;
+   line-height: 30px;
+   font-size: 20px;
+   font-weight: 100;
+   color: white;
+}
+
+/*responsive dimensioning*/
+
+@media only screen and (max-width: 810px) {
+   /*menu*/
+    .nav-button {
+      font-size: 18px;
+      padding: 0 10px;
+      line-height: 30px;
+      height: 30px;
+   }
+   .nav {
+      height: 30px;
+   }
+   /*loader*/
+   .loader {
+      width: 100px;
+      height: 100px;
+      font-size: 50px;
+      top: calc( 50vh - 50px );
+      left: calc( 50vw - 50px );
+   }
+   .brace {
+      line-height: 100px;
+      width: 50px;
+   }
+   /*title*/
+   .parallax-div-text {
+      font-size: 20px;
+      line-height: 22px;
+   }
+   /*skill*/
+   .skill {
+      height: 30px;
+      line-height: 14px;
+
+   }
+   .skill-title {
+      font-size: 12px;
+      line-height: 14px;
+   }
+   .bar {
+      height: 8px;
+      width: 1px;
+      margin-left: 1;
+   }
+   /*boxes*/
+   .box {
+      margin-top: 140px;
+      border: solid black 5px;
+   }
+   .box-inner-text {
+      font-size: 12px;
+   }
+   /*achievment*/
+   .achievment-inner-text {
+      font-size: 15px;
+      line-height: 25px;
+   }
+   .button {
+      margin: 0 10px;
+   }
+}
+
+
+@media only screen and (max-width: 640px) {
+   /*menu*/
+    .nav-button {
+      font-size: 12px;
+      height: 25px;
+      line-height: 25px;
+   }
+   .nav {
+      height: 25px;
+   }
+   /*title*/
+   .parallax-div-text {
+      font-size: 18px;
+      line-height: 20px;
+   }
+   /*skill*/
+   .skill {
+      height: 30px;
+      line-height: 14px;
+
+   }
+   .skill-title {
+      font-size: 12px;
+      line-height: 14px;
+   }
+   .bar {
+      height: 6px;
+      width: 2px;
+      margin-left: 0;
+   }
+   /*boxes*/
+   .box {
+      min-height: 100px;
+      min-width: 100px;
+      margin-top: 90px;
+      border: solid black 5px;
+   }
+   .box-inner-text {
+      font-size: 10px;
+   }
+   /*achievment*/
+   .achievment-inner-text {
+      font-size: 15px;
+      line-height: 25px;
+   }
+   .button {
+      margin: 0 10px;
+   }
+}
+
+
+@media only screen and (max-width: 400px) {
+   /*menu*/
+    .nav-button {
+      font-size: 8px;
+   }
+   /*skill*/
+   .skill {
+      height: 30px;
+      line-height: 10px;
+
+   }
+   .skill-title {
+      font-size: 7px;
+      line-height: 10px;
+   }
+   .bar {
+      height: 5px;
+      width: 1px;
+      margin-left: 0;
+   }
+   /*boxes*/
+   .section-div {
+      padding: 30px 0;
+      box-sizing: border-box;
+   }
+   .section {
+      width: 100%;
+      height: 200px;
+      float: none;
+      margin: 10px 0 0 0;
+   }
+   .box {
+      min-width: 200px;
+      min-height: 200px;
+      margin-left: 0;
+      margin-top: 0;
+      transform: none;
+      border: solid black 5px;
+   }
+   .box-inner-text {
+      font-size: 10px;
+   }
 }
